applied wrap to flexbox to prevent overflow of price text

--- a/product-preview-card-component-main/styles/style.css
+++ b/product-preview-card-component-main/styles/style.css
@@ -73,4 +73,5 @@
   .flex-group{
     display: flex;
     gap: 1rem;
+    flex-wrap: wrap; /*prevent overflow (may not need b/c screen probably not too small)*/
   }
